--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_payroll
+spring.datasource.username=root
+spring.datasource.password=iakshar
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
