--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,8 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.profiles.active=DEV
+environment=COMMON
+
+#spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_payroll
 spring.datasource.username=root
 spring.datasource.password=iakshar
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-logging.file.name=application.log
-logging.level.root=WARN
-logging.level.org.springframework.web=WARN
-logging.level.hibernate=ERROR
-logging.level.com.example.employeepayrollappspring=DEBUG
-
-#Logging pattern for the console and file
-logging.pattern.console=%d{yyyy-dd-MM HH:mm;ss.SSS} [%level] [%thread] [%logger{5}:%line] %msg%n
