--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ environment=COMMON
 
 #spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_payroll
-spring.datasource.username=root
-spring.datasource.password=iakshar
+spring.datasource.username=${username}
+spring.datasource.password=${password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
