--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.profiles.active=DEV
 environment=COMMON
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_payroll
-spring.datasource.username=${username}
-spring.datasource.password=${password}
+spring.datasource.username=root
+spring.datasource.password=iakshar
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
